[gd_scene load_steps=4 format=3 uid="uid://7j67kmjgw7gm"]

[ext_resource type="Script" path="res://Scripts/weapon.gd" id="1_be8uf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qw0wf"]
radius = 6.0
height = 22.0

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_4y8c8"]
polygon = PackedVector2Array(0, -10, 2, -7, 2, -1, 0, 0, 0, 4, -1, 3)

[node name="Knife" type="RigidBody2D"]
collision_layer = 8
freeze = true
freeze_mode = 1
script = ExtResource("1_be8uf")
weapon_type = "melee"

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(0, -10, 2, -7, 2, -1, 0, 0, 0, 4, -1, 3)

[node name="Collision" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(3, -7, 3, -1, 1, 1, 0, 5, -2, 3, -1, -12)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-1, 2)

[node name="InteractArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_qw0wf")

[node name="LightOccluder2D" type="LightOccluder2D" parent="InteractArea"]
occluder = SubResource("OccluderPolygon2D_4y8c8")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="InteractArea" to="." method="_on_interact_area_body_entered"]
[connection signal="body_exited" from="InteractArea" to="." method="_on_interact_area_body_exited"]
